# ternoa-cli

./: Cargo.toml  README.md  metadata-mainnet.scale
src/: main.rs
src/subternxt/: constants.rs  counts.rs  mod.rs  state.rs
src/subternxt/graphql/: active_wallets.rs  first_item_block_id.rs  mod.rs  total_transactions.rs
src/subternxt/graphql/gen-client-code/: active_wallets.rs  total_transactions.rs
src/subternxt/graphql/queries/: active_wallets.graphql  first_item_block_id.graphql  total_transactions.graphql
src/subternxt/graphql/schemas/: mainnet_dictionary_schema.json  mainnet_graphql_schema.json
