[package]
name = "ternoa-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for querying Ternoa chain"
license = "GNU GPL 3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.25.0"
tokio = {version = "1.8", features = ["rt-multi-thread", "macros", "time"]}
sp-keyring = "7.0.0"
futures = "0.3.13"
codec = {package = "parity-scale-codec", version = "3.0.0", default_features = false, features = ["derive", "full", "bitvec"]}
hex = "0.4.3"
hex-literal = "0.3.4"
tracing-subscriber = "0.3.11"
clap = { version = "4.0.32", features = ["derive"] }
# indicatif = "0.17.2"
# This is going to perform most of the graphql legwork for us
graphql_client = "0.9.0"
# These three below are for json serialization and deserialization
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
# For making http requests
reqwest = {version = "0.11.0", features = ["json"]}
# Error handling crate
anyhow = "1.0.39"


[features]
command = []